--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     hostname: jinja2docker
     command: tail -f /etc/alpine-release #keep the container up to use exec command from docker
     entrypoint: ls #override
+    environment:
+      limit: 'sky' #example env var inserted. you can read it with environ('limit')
     volumes:
       - C:\Users\cdinuta\IdeaProjects\b2bi-docker-compose\automation\run\jinja2\templates:/data
       - C:\Users\cdinuta\IdeaProjects\b2bi-docker-compose\automation\run\jinja2\variables:/variables
