--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ services:
 
 before_install:
   - docker pull dinutac/jinja2docker:latest
+  - docker-compose up
   - docker exec jinja2docker python3 -m unittest discover ${SCRIPTS_DIR} "*_test.py"
