--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ services:
 before_install:
   - docker pull dinutac/jinja2docker:latest
   - docker-compose up -d
+  - sleep 10
   - docker exec jinja2docker python3 -m unittest discover ${SCRIPTS_DIR} "*_test.py"
   - docker-compose down -v
