added docker build

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,13 @@ language: python
 services:
   - docker
 
-before_install:
-  - docker pull dinutac/jinja2docker:latest
+deploy:
+  - docker build -t dinutac/jinja2docker:latest .
   - docker-compose up -d
   - sleep 10
+
+install:
   - docker exec jinja2docker python3 -m unittest discover ${SCRIPTS_DIR} "*_test.py"
+
+after_deploy:
   - docker-compose down -v
