--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: test-analyzer-flask
+  name: jinja2docker
 spec:
   containers:
-    - name: test-analyzer-flask
+    - name: jinja2docker
       image: dinutac/jinja2docker:latest
       command: ["/home/dev/bin/start.sh"]
       volumeMounts:
@@ -20,5 +20,5 @@ spec:
   volumes:
     - name: flask-volume
       hostPath:
-        path: "/C/Users/IdeaProjects/test-analyzer"
+        path: "/C/Users/IdeaProjects/jinja2docker"
         type: Directory
