--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -1,24 +1,40 @@
-apiVersion: v1
-kind: Pod
+kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: test-analyzer-flask
+  labels:
+    k8s-app: jinja2docker
+  name: jinja2docker
+  namespace: default
 spec:
-  containers:
-    - name: test-analyzer-flask
-      image: dinutac/jinja2docker:latest
-      command: ["/home/dev/bin/start.sh"]
-      volumeMounts:
-        - mountPath: /home/dev/bin/
-          name: flask-volume
-      ports:
-        - containerPort: 80
-  #      readinessProbe:
-  #        httpGet:
-  #          path: /
-  #          port: 80
+  replicas: 2
+  revisionHistoryLimit: 10
+  selector:
+    matchLabels:
+      k8s-app: jinja2docker
+  template:
+    metadata:
+      labels:
+        k8s-app: jinja2docker
+    spec:
+      containers:
+        - name: jinja2docker
+          image: dinutac/jinja2docker:latest
+          command: ["/home/dev/bin/start.sh"]
+          volumeMounts:
+            - mountPath: /home/dev/bin/
+              name: flask-volume
+          ports:
+            - containerPort: 80
+          #      readinessProbe:
+          #        httpGet:
+          #          path: /
+          #          port: 80
 
-  volumes:
-    - name: flask-volume
-      hostPath:
-        path: "/C/Users/IdeaProjects/test-analyzer"
-        type: Directory
+      volumes:
+        - name: flask-volume
+          hostPath:
+            #modify your path here!!!
+            path: "/C/Users/IdeaProjects/test-analyzer"
+            type: Directory
+
+
