--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ before_install:
 install:
   - pip install -r requirements.txt
 
+before_script:
+  - py.test $SCRIPTS_DIR/render_test.py --cov=jinja2docker
+
 script:
   - python3 -m unittest discover $SCRIPTS_DIR "*_test.py"
   - docker exec jinja2docker python3 -m unittest discover $DOCKER_SCRIPTS_DIR "render_test.py"
@@ -42,7 +45,7 @@ script:
     dinutac/jinja2docker:latest
     /data/json.j2 /variables/json.json --format=json
 
-#after_success:
-#  - coveralls
+after_success:
+  - coveralls
 
 
