--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - pip install -r requirements.txt
 
 before_script:
-  - py.test $SCRIPTS_DIR/render_test.py --cov=jinja2docker
+  - py.test $SCRIPTS_DIR/render_test.py --cov=entities
 
 script:
   - python3 -m unittest discover $SCRIPTS_DIR "*_test.py"
