--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 python:
-  - "3.6"
+  - "3.7"
 
 services:
   - docker
@@ -22,6 +22,7 @@ before_install:
 
 install:
   - pip install -r requirements.txt
+  - pip3 install coveralls
 
 before_script:
   - py.test $SCRIPTS_DIR/render_test.py --cov=entities
