--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit')
     volumes:
-      - ./inputs/templates:/data
+      - ./inputs/templates:/templates
       - ./inputs/variables:/variables
       - ./:/home/dev/scripts/
     ports:
