--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 install:
   - pip3 install coveralls
   - pip3 install pytest-cov
+  - pip3 install PyYAML
 
 before_script:
   - py.test tests/render_test.py --cov=entities
