--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 jinja2-cli[yaml,toml,xml]
 
-flask
-requests
-parameterized
-python-coveralls
+coveralls
 pytest-cov
-flask_swagger_ui
-flask_cors
+PyYAML
